src/test/deca/codegen/invalid/execution_input_error_rfloat_int.deca
// Description:
//    Test read float with input int
//
// Input:
//[Begin Input]
//1
//[End Input]
//
// Result:
//[Begin Result]
//Error: Input/Output error
//[End Result]
//
// History:
//    created on 09/01/2025
{
    float a = readFloat();
}